# bazel-pycrate

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  demo.ipynb  launcher.py
python/: py_interpreter.bzl
